--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "galois (>=0.4.6,<0.5.0)",
+    "numba (>=0.61.2,<0.62.0)",
 ]
 
 
