--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "rijnd3d"
+name = "r3d"
 version = "0.1.0"
 description = "An enhanced version of Rijndael encryption"
 authors = [
