--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "r3d"
-version = "1.0.0"
+name = "rijndael3d"
+version = "1.0.1"
 description = "An enhanced version of Rijndael encryption"
 authors = [
     {name = "Jebbex",email = "107323805+Jebbex1@users.noreply.github.com"}
