--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,5 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
 galois = "^0.4.6"
+pycryptodome = "^3.23.0"
 
